--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,6 @@
 ---
 layout: layout
+comments: true
 ---
 
 <section class="content">
@@ -32,6 +33,8 @@ layout: layout
     </section>
 
   </section>
+
+  {% if page.comments %}
   <section class="meta">
     <div id="disqus_thread"></div>
     <script type="text/javascript">
@@ -48,5 +51,6 @@ layout: layout
     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
   </section>
-
+  {% endif %}
+  
 </section>
